@@ -2,6 +2,7 @@ include $(top_srcdir)/build-aux/init.mk
 
 # -- Distribute and install headers
 nobase_include_HEADERS =				\
+	hpp/corbaserver.hh				\
 	hpp/corbaserver/config.hh			\
 	hpp/corbaserver/doc.hh				\
 	hpp/corbaserver/fwd.hh				\
