@@ -1,0 +1,22 @@
+// Copyright (C) 2010 by Thomas Moulard, CNRS.
+//
+// This file is part of the hpp-corbaserver.
+//
+// roboptim is free software: you can redistribute it and/or modify
+// it under the terms of the GNU Lesser General Public License as published by
+// the Free Software Foundation, either version 3 of the License, or
+// (at your option) any later version.
+//
+// roboptim is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU Lesser General Public License for more details.
+//
+// You should have received a copy of the GNU Lesser General Public License
+// along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
+
+#ifndef HPP_CORBASERVER_HH
+# define HPP_CORBASERVER_HH
+# include <hpp/corbaserver/fwd.hh>
+# include <hpp/corbaserver/server.hh>
+#endif //! HPP_CORBASERVER_HH
